--- a/package.json
+++ b/package.json
@@ -1,42 +1,52 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "set NODE_ENV=development&&webpack-dev-server --hot --open",
-    "dev": "set NODE_ENV=development&&webpack",
-    "build": "set NODE_ENV=production&&webpack"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/preset-env": "^7.19.1",
-    "@module-federation/svg-sprite-loader": "^6.1.0",
-    "@types/webpack-env": "^1.18.0",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^4.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss": "^8.4.16",
-    "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^7.8.2",
-    "pug": "^2.0.4",
-    "pug-html-loader": "^1.1.5",
-    "pug-loader": "^2.4.0",
-    "sass": "^1.54.9",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "svg-spritemap-webpack-plugin": "^4.5.0",
-    "ts-loader": "^9.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "webpack5-svg-sprite-loader": "^5.1.1"
-  }
+	"name": "typescript",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "set NODE_ENV=development&&webpack-dev-server --hot --open",
+		"dev": "set NODE_ENV=development&&webpack",
+		"build": "set NODE_ENV=production&&webpack"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.19.1",
+		"@babel/preset-env": "^7.19.1",
+		"@module-federation/svg-sprite-loader": "^6.1.0",
+		"@types/webpack-env": "^1.18.0",
+		"babel-loader": "^8.2.5",
+		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.7.1",
+		"eslint": "^8.31.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-import": "^2.27.4",
+		"eslint-plugin-prettier": "^4.2.1",
+		"file-loader": "^6.2.0",
+		"html-loader": "^4.1.0",
+		"html-webpack-plugin": "^5.5.0",
+		"mini-css-extract-plugin": "^2.6.1",
+		"postcss": "^8.4.16",
+		"postcss-loader": "^7.0.1",
+		"postcss-preset-env": "^7.8.2",
+		"prettier": "^2.8.3",
+		"pug": "^2.0.4",
+		"pug-html-loader": "^1.1.5",
+		"pug-loader": "^2.4.0",
+		"sass": "^1.54.9",
+		"sass-loader": "^13.0.2",
+		"style-loader": "^3.3.1",
+		"stylelint": "^14.16.1",
+		"stylelint-config-standard": "^29.0.0",
+		"stylelint-config-standard-scss": "^6.1.0",
+		"stylelint-order": "^6.0.1",
+		"stylelint-scss": "^4.3.0",
+		"svg-spritemap-webpack-plugin": "^4.5.0",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.11.1",
+		"webpack5-svg-sprite-loader": "^5.1.1"
+	}
 }
